# argus-ai-debate

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRUX_Protocol_Specification.docx  LICENSE  MANIFEST.in  README.md  SECURITY.md  context.txt  crux,txt  pyproject.toml  pytest.ini  verify_core_tools.py
.github/workflows/: README.md  deploy-docs.yml
.orchids/: orchids.json
argus/: README.md  __init__.py  cli.py  orchestrator.py
argus-docs/: package.json  tailwind.config.ts
argus/agents/: README.md  (+6 more)
argus_terminal/: README.md  argus_sandbox.spec  build.py  debug_import.py  pyproject.toml  verify_tools_final.py
argus_terminal/argus_terminal/: __init__.py  __main__.py  app.py  config.py
argus_terminal/argus_terminal/screens/: __init__.py  benchmark.py  debate.py  help.py  knowledge.py  main.py  providers.py  settings.py  tools.py
argus_terminal/argus_terminal/themes/: __init__.py  amber.tcss  base.tcss  green.tcss
argus_terminal/argus_terminal/utils/: __init__.py  argus_bridge.py
argus_terminal/argus_terminal/widgets/: __init__.py  agent_status.py  cdag_view.py  command_input.py  footer.py  header.py  log_viewer.py  posterior_gauge.py  progress_panel.py  sidebar.py
argus_viz/: __init__.py  __main__.py  app.py  components.py  debate_engine.py  flow_explainer.py  visualizations.py
biosage_terminal/: BUILD_AND_PUBLISH.md  COMMANDS.txt  MANIFEST.in  QUICK_REFERENCE.md  README.md  RELEASE_CHECKLIST.md  THIS_SUMMARY.txt  UPDATE_SUMMARY.md  build_package.bat  build_package.ps1  pyproject.toml
docs-website/: .gitignore  DEPLOYMENT.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
tests/: __init__.py  conftest.py
(+321 files in other folders)
