[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-terminal"
version = "3.1"
description = "Argus Terminal Sandbox - Bloomberg-style TUI for AI Debate System"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Argus Team", email = "argus@example.com"}
]
keywords = [
    "argus",
    "terminal",
    "tui",
    "textual",
    "ai",
    "debate",
    "bloomberg",
    "retro"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Terminals",
]
requires-python = ">=3.11"
dependencies = [
    "textual>=0.47.0",
    "rich>=13.0.0",
    "argus-debate-ai>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
argus-sandbox = "argus_terminal:main"

[project.urls]
Homepage = "https://github.com/argus-ai/argus-terminal"
Documentation = "https://argus-ai.github.io/argus-terminal"
Repository = "https://github.com/argus-ai/argus-terminal"

[tool.setuptools.packages.find]
where = ["."]
include = ["argus_terminal*"]

[tool.setuptools.package-data]
"argus_terminal.themes" = ["*.tcss"]
